# polyglot-tokenizer

./: README.md  README.rst  pyproject.toml  setup.cfg  setup.py
indic_tokenizer/: __init__.py  __main__.py  armenian_tokenizer.py  base.py  cyrillic_tokenizer.py  georgian_tokenizer.py  greek_tokenizer.py  indic_tokenizer.py  roman_tokenizer.py  tokenizer.py
indic_tokenizer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  pbr.json  top_level.txt
isc_tokenizer/: __init__.py  __init__.py.html  __main__.py  roman_tokenizer.py
polyglot_tokenizer/: __init__.py  armenian_tokenizer.py  base.py  cyrillic_tokenizer.py  georgian_tokenizer.py  greek_tokenizer.py  hebrew_tokenizer.py  indic_tokenizer.py  roman_tokenizer.py  tokenizer.py
